added vocabulary.com content

--- a/templates/search.html
+++ b/templates/search.html
@@ -21,6 +21,10 @@
     <div class="col-mod-offset-2">
       {{mnemonic|safe}}
     </div>
+    &nbsp;&nbsp;
+    <div class="col-mod-offset-2">
+      {{vocabulary|safe}}
+    </div>
     
   </body>
   <script src="http://code.jquery.com/jquery.js"></script>
